[package]
name = "cpu-usage-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", default-features = false, features = ["bracketed-paste", "events", "serde", "event-stream"] }
ctrlc = "3.4.4"
libc = "0.2.153"
num-bigint = { version = "0.4.4", features = ["serde"] }
rand = "0.8.5"
signal-hook = "0.3.17"
sysinfo = { version = "0.30.11", features = ["serde", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
